--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -4,10 +4,20 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Cabin{% if title %} &middot; {{ title }}{% endif %}</title>
-  <meta name="description" content="We are makers. We design and build experiences for people and projects we love.">
 
   <meta name="viewport" content="initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <meta property="og:site_name" content="Cabin">
+  <meta property="og:type" content="website">
+  <meta property="fb:admins" content="507275748,696877223">
+  <meta property="og:url" content="{{ request.url }}">
+  <meta property="og:image" content="{{ page_image|default(url_for('static', filename='cabin-symbol.png', _external=true)) }}">
+  <meta property="og:title" content="Cabin{% if title %} &middot; {{ title }}{% endif %}">
+  {%- with description = "We are makers. We design and build experiences for people and projects we love." %}
+    <meta property="og:description" content="{{ page_description|default(description) }}">
+    <meta name="description" content="{{ description }}">
+  {%- endwith %}
 
   {% assets 'screen.css', 'icons.css' -%}
     <link href="{{ ASSET_URL }}" rel="stylesheet">
