--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -109,5 +109,8 @@
     ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js']);
   </script>
   {% block scripts %}{% endblock %}
+  {%- if debug -%}
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+  {%- endif %}
 </body>
 </html>
