--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Cabin{% if title %} &middot; {{ title }}{% endif %}</title>
+  <title>Cabin{% if title and not splash %} &middot; {{ title }}{% endif %}</title>
 
   <meta name="viewport" content="initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -13,7 +13,7 @@
   <meta property="fb:admins" content="507275748,696877223">
   <meta property="og:url" content="{{ request.url }}">
   <meta property="og:image" content="{{ page_image|default(url_for('static', filename='cabin-symbol.png', _external=true)) }}">
-  <meta property="og:title" content="Cabin{% if title %} &middot; {{ title }}{% endif %}">
+  <meta property="og:title" content="Cabin{% if title and not splash %} &middot; {{ title }}{% endif %}">
   {%- with description = "We are makers. We design and build experiences for people and projects we love." %}
     <meta property="og:description" content="{{ page_description|default(description) }}">
     <meta name="description" content="{{ description }}">
