Split fb:admins into two properties
The debugger understands, but complains about, a comma-separated value.

--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -10,7 +10,8 @@
 
   <meta property="og:site_name" content="Cabin">
   <meta property="og:type" content="website">
-  <meta property="fb:admins" content="507275748,696877223">
+  <meta property="fb:admins" content="507275748">
+  <meta property="fb:admins" content="696877223">
   <meta property="og:url" content="{{ request.url }}">
   <meta property="og:image" content="{{ page_image|default(url_for('static', filename='cabin-symbol.png', _external=true)) }}">
   <meta property="og:title" content="Cabin{% if title and not splash %} &middot; {{ title }}{% endif %}">
