--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -13,7 +13,7 @@
   <meta property="fb:admins" content="507275748">
   <meta property="fb:admins" content="696877223">
   <meta property="og:url" content="{{ request.url }}">
-  <meta property="og:image" content="{{ page_image|default(url_for('static', filename='cabin-symbol.png', _external=true)) }}">
+  <meta property="og:image" content="{{ page_image|default(url_for('static', filename='cabin-symbol-300.png', _external=true)) }}">
   <meta property="og:title" content="Cabin{% if title and not splash %} &middot; {{ title }}{% endif %}">
   {%- with description = "We are makers. We design and build experiences for people and projects we love." %}
     <meta property="og:description" content="{{ page_description|default(description) }}">
