Trying out bronze hover-hrs

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -95,7 +95,7 @@ hover-hr(duration = 200ms)
   position: relative
   hr
     absolute: top left
-    background: cabin_black
+    background: cabin_bronze
     border: none
     margin: 0
     size: 0 1px
