Add arrow icon to project external links

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -266,8 +266,13 @@ body.splash-transition
     color: cabin_black
     display: inline-block
     margin-top: 10px
+    .arrow-mini
+      background-color: cabin_black
+      vertical-align: middle
     &:hover
       color: cabin_bronze
+    &:hover .arrow-mini
+      background-color: cabin_bronze
   .images img
     background-color: cabin_grey_light
     clear: both
