Add share links to project page; fixes #18

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -549,12 +549,22 @@ body.splash-transition
       margin-right: 40px
     .tab-contents
       width: 520px
-    .prev-next a
+    .arrow-left, .arrow-right
       background-color: cabin_grey_light
       border-radius: 2px
       size: 38px button_height - 2px
       &:hover
         background-color: cabin_bronze
+
+    .bottom
+      text-align: center
+      .social
+        display: inline-block
+        margin: 0 15px
+        > a
+          background-color: black
+          &:hover
+            background-color: cabin_bronze
 
 
   // Admin  ////////////////////////////////////////
