--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -79,7 +79,7 @@
   #}
   <script>
     {% if not debug %}{# no need for analytics in dev #}
-    window._gaq = [['_setAccount', 'UA-26897868-1'], ['_trackPageview']];
+    window._gaq = [['_setAccount', 'UA-26897868-1']];
     {% endif %}
     Modernizr.load([{
       {% set comma = joiner(',') -%}
