First rough pass on about page

--- a/cabin/style/icons.styl
+++ b/cabin/style/icons.styl
@@ -62,9 +62,9 @@ social-icon(email)
 social-icon(facebook)
 social-icon(flickr)
 social-icon(github)
-// social-icon(instagram)
+social-icon(instagram)
 // social-icon(linkedin)
-// social-icon(pinterest)
+social-icon(pinterest)
 social-icon(tumblr)
 social-icon(twitter)
 
@@ -101,8 +101,8 @@ social-icon(twitter)
   social-icon(facebook, true)
   social-icon(flickr, true)
   social-icon(github, true)
-  // social-icon(instagram, true)
+  social-icon(instagram, true)
   // social-icon(linkedin, true)
-  // social-icon(pinterest, true)
+  social-icon(pinterest, true)
   social-icon(tumblr, true)
   social-icon(twitter, true)
