--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -13,9 +13,10 @@
       #}
     </div>
     <div class="menu">
-      <a class="partners">Partners</a>
-      <a class="clients">Clients / Services</a>
-      <a class="connect">Connect</a>
+      <a data-name="partners">Partners</a>
+      <a data-name="clients">Clients / Services</a>
+      <a data-name="connect">Connect</a>
+      <div class="arrow"></div>
     </div>
   </div>
 
@@ -56,9 +57,9 @@
         one man knows.</p>
 
         <div class="social">
-          <a href="https://twitter.com/uberbek" class="twitter">@uberbek</a>
-          <a href="http://instagram.com/uberbek" class="instagram">Instagram</a>
-          <a href="http://pinterest.com/uberbek/" class="pinterest">Pinterest</a>
+          <a href="https://twitter.com/uberbek" class="twitter" target="_blank">@uberbek</a>
+          <a href="http://instagram.com/uberbek" class="instagram" target="_blank">Instagram</a>
+          <a href="http://pinterest.com/uberbek/" class="pinterest" target="_blank">Pinterest</a>
         </div>
       </div>
 
@@ -79,9 +80,9 @@
         now calls Portland, Oregon home.</p>
 
         <div class="social">
-          <a href="https://twitter.com/zakj" class="twitter">@zakj</a>
-          <a href="http://instagram.com/zakj" class="instagram">Instagram</a>
-          <a href="https://github.com/zakj" class="github">GitHub</a>
+          <a href="https://twitter.com/zakj" class="twitter" target="_blank">@zakj</a>
+          <a href="http://instagram.com/zakj" class="instagram" target="_blank">Instagram</a>
+          <a href="https://github.com/zakj" class="github" target="_blank">GitHub</a>
         </div>
       </div>
     </section>
