Fix up colophon text weight

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -751,7 +751,8 @@ body.splash-transition
           margin-top: 5px
 
     section.colophon
-      light-text()
+      h1
+        light-text()
       background-color: cabin_bronze
       color: white
       clear: none
