--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -40,7 +40,7 @@
     <section class="partners selected">
       <h1>Partners</h1>
 
-      <div class="bio">
+      <div class="bio bek">
         <hgroup>
           <h2>Bek Hodgson</h2>
           <h3><span class="founder">Founder / </span>Creative Director</h3>
@@ -63,7 +63,7 @@
         </div>
       </div>
 
-      <div class="bio">
+      <div class="bio zak">
         <hgroup>
           <h2>Zak Johnson</h2>
           <h3><span class="founder">Founder / </span>Technologist</h3>
@@ -89,8 +89,7 @@
 
     <section class="graph selected">
       <h2>It takes two<br>to make it out of sight.</h2>
-
-      XXX - graph
+      <div></div>
     </section>
 
     <section class="clients">
