About page images are now in CSS

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -368,6 +368,7 @@ body.splash-transition
         absolute: left top; bottom: 0
         background-size: 130%
       .bek
+        // XXX should be using a cssrewrite filter instead of hardcoded
         background-image: url(/static/about-bek.jpg)
         background-position: 55% 38%
         right: 50%
