--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -4,14 +4,7 @@
 
 {% block content %}
   <div class="top">
-    <div class="pics">
-      <span class="bek"></span>
-      <span class="zak"></span>
-      {#
-      <img src="{{ url_for('static', filename='about-bek.jpg') }}" class="bek" alt>
-      <img src="{{ url_for('static', filename='about-zak.jpg') }}" class="zak" alt>
-      #}
-    </div>
+    <div class="pics"><span class="bek"></span><span class="zak"></span></div>
     <div class="menu">
       <a data-name="partners">Partners</a>
       <a data-name="clients">Clients / Services</a>
