Shrink services text on about page

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -740,6 +740,7 @@ body.splash-transition
         position: static
 
     section.services
+      font-size: 13px
       float: left
       margin-top: 50px
       ol.services
