--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -28,8 +28,11 @@
 </head>
 <body{% if splash %} class="splash"{% endif %}>
   <header>
-    <h1>Cabin</h1>
-    <h2>Crafting experiences for people &amp; projects we love.</h2>
+    <hgroup>
+      <h1>Cabin</h1>
+      <h2>Crafting experiences <br class="m">for people
+        <br class="f">&amp; <br class="m">projects we love.</h2>
+    </hgroup>
   </header>
 
   <div class="main{% if page %} page-{{ page }}{% endif %}"><hr>
