--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -123,5 +123,17 @@
 
       xo - signature
     </section>
+
+    <section class="connect">
+      <ol>
+        <li><a href="mailto:xo@madebycabin.com">xo@madebycabin.com</a></li>
+        <li>+1 415 255 5473</li>
+        <li><a target="_blank" href="http://madebycabin.tumblr.com/">Blog</a></li>
+        <li><a target="_blank" href="https://twitter.com/madebycabin">@madebycabin</a></li>
+        <li><a target="_blank" href="https://www.facebook.com/madebycabin">Facebook</a></li>
+        <li><a target="_blank" href="http://www.flickr.com/photos/madebycabin">Flickr</a></li>
+        <li><a target="_blank" href="https://github.com/cabin">GitHub</a></li>
+      </ol>
+    </section>
   </div>
 {% endblock %}
