--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -3,14 +3,11 @@
 {% set page = 'about' %}
 
 {% block content %}
-  <div class="top">
-    <div class="pics"><span class="bek"></span><span class="zak"></span></div>
-    <div class="menu">
-      <a data-name="partners">Partners</a>
-      <a data-name="clients">Clients / Services</a>
-      <a data-name="connect">Connect</a>
-      <div class="arrow"></div>
-    </div>
+  <div class="menu">
+    <a data-name="partners">Partners</a>
+    <a data-name="clients">Clients / Services</a>
+    <a data-name="connect">Connect</a>
+    <div class="arrow"></div>
   </div>
 
   <h1>It takes two<br>to make a thing<br>go right.</h1>
@@ -34,6 +31,7 @@
       <h1>Partners</h1>
 
       <div class="bio bek">
+        <span class="photo bek"></span>
         <hgroup>
           <h2>Bek Hodgson</h2>
           <h3><span class="founder">Founder / </span>Creative Director</h3>
@@ -57,6 +55,7 @@
       </div>
 
       <div class="bio zak">
+        <span class="photo zak"></span>
         <hgroup>
           <h2>Zak Johnson</h2>
           <h3><span class="founder">Founder / </span>Technologist</h3>
@@ -129,7 +128,7 @@
         <li><a href="mailto:xo@madebycabin.com">xo@madebycabin.com</a></li>
         <li>+1 415 255 5473</li>
         <li><a target="_blank" href="http://madebycabin.tumblr.com/">Blog</a></li>
-        <li><a target="_blank" href="https://twitter.com/madebycabin">@madebycabin</a></li>
+        <li><a target="_blank" href="https://twitter.com/madebycabin">Twitter</a></li>
         <li><a target="_blank" href="https://www.facebook.com/madebycabin">Facebook</a></li>
         <li><a target="_blank" href="http://www.flickr.com/photos/madebycabin">Flickr</a></li>
         <li><a target="_blank" href="https://github.com/cabin">GitHub</a></li>
